[NEW] IFAListViewController can now handle delete and duplicate functions with multiple selection via new properties: deleteBarButtonItem, duplicateBarButtonItem, deleteTableViewRowAction and duplicateTableViewRowAction.